# FinancialCheckAgent

./: .$流程图.drawio.bkp  .gitignore  README.md  main.py  pyproject.toml
Test/: TEST1.py  pic_tuples_1.txt  pic_tuples_2.txt
config/: setting.py
graph/: graph_built.py
nodes/: add_mappings_node.py  analysis_node.py  combine_node.py  human_review_node.py  pretreatment_node.py  restock_node.py
schemas/: state_schema.py
tools/: aggregation_rules.yaml  mapping_relations.yaml
utils/: LLM_api.py  collect_rows_and_columns.py  extract_tuples.py  read_tuples.py  save_tuples.py
